--- a/package.json
+++ b/package.json
@@ -1,16 +1,35 @@
 {
+  "name": "my-project",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "@types/node": "20.1.3",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "next": "13.4.2",
-    "postcss": "8.4.23",
+    "@apollo/client": "^3.7.11",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
+    "@moralisweb3/common-evm-utils": "^2.19.0",
+    "@rainbow-me/rainbowkit": "^0.12.7",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.33",
+    "@types/react-dom": "18.0.11",
+    "@uniswap/v3-sdk": "^3.9.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
+    "ethers": "^5.1.0",
+    "graphql": "^16.6.0",
+    "moralis": "^2.19.0",
+    "next": "13.3.0",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "tailwindcss": "^3.3.1",
+    "typescript": "5.0.4",
+    "wagmi": "^0.12.1"
   }
 }
