--- a/interface/package.json
+++ b/interface/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aave/core-v3": "^1.17.2",
     "@apollo/client": "^3.7.11",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
