--- a/interface/package.json
+++ b/interface/package.json
@@ -18,6 +18,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "@uniswap/sdk": "^3.0.3",
     "@uniswap/v3-sdk": "^3.9.0",
     "autoprefixer": "^10.4.14",
     "eslint": "8.38.0",
