feat:Restyle the home and dao page

--- a/interface/package.json
+++ b/interface/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.0.17",
     "@moralisweb3/common-evm-utils": "^2.19.0",
     "@rainbow-me/rainbowkit": "^0.12.7",
+    "@types/identicon.js": "^2.3.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -25,6 +26,7 @@
     "eslint-config-next": "13.3.0",
     "ethers": "^5.1.0",
     "graphql": "^16.6.0",
+    "identicon.js": "^2.3.3",
     "moralis": "^2.19.0",
     "next": "13.3.0",
     "postcss": "^8.4.21",
