--- a/contracts/package.json
+++ b/contracts/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@aave/core-v3": "^1.17.2",
+    "@chainlink/contracts": "^0.6.1",
     "@openzeppelin/contracts": "^4.8.3",
+    "@uniswap/v3-periphery": "^1.4.3",
     "dotenv": "^16.0.3"
   }
 }
